[package]
name = "rac"
version = "0.1.0"
authors = ["Ranxi Verba <ranxi.verba@gmail.com>"]
edition = "2018"
license = "Apache 2.0"
repository = "https://github.com/ranxiverba/rac"
description = "Traits and types to work with elliptic curve and aead cipher"

[dependencies]
generic-array = { version = "0.12" }
digest = { version = "0.8" }
secp256k1 = { version = "0.16", optional = true }
curve25519-dalek = { version = "2.0", optional = true }
chacha20-poly1305-aead = { version = "0.1", optional = true }
byteorder = { version = "1.3", optional = true }
hex = { version = "0.4", optional = true }

[features]
use_std = []
deafult = ["curve25519-dalek"]
