[package]
name = "rac"
version = "0.1.0"
authors = ["Ranxi Verba <ranxi.verba@gmail.com>"]
edition = "2018"
license = "Apache 2.0"
repository = "https://github.com/ranxiverba/rac"
description = "Traits and types to work with elliptic curve and aead cipher"

[dependencies]
generic-array = { version = "0.12" }
digest = { version = "0.8" }
hex = { version = "0.4" }
secp256k1 = { version = "0.17", optional = true }
curve25519-dalek = { version = "2.0", optional = true }
byteorder = { version = "1.3", optional = true }
chacha20poly1305 = { version = "0.3", optional = true }
aes-gcm = { version = "0.3", optional = true }
