[package]
name = "rac"
version = "1.0.0"
authors = ["Ranxi Verba <ranxi.verba@gmail.com>"]
edition = "2018"
license = "Apache 2.0"
repository = "https://github.com/ranxiverba/rac"
description = "Traits and types to work with elliptic curve"

[dependencies]
generic-array = { version = "0.12" }
secp256k1 = { version = "0.17", optional = true }
curve25519-dalek = { version = "2.0", optional = true }
